<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="50dp">

    <RelativeLayout
        android:id="@+id/al_rl_title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/al_iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/dp_10"
            android:contentDescription="@string/content_description"
            android:padding="5dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/al_tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/txt_dark_blue"
            android:textSize="28sp"
            app:layout_goneMarginBottom="5dp" />

        <View
            android:id="@+id/acp_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/al_tv_login"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/al_tv_login" />

    </RelativeLayout>

    <TextView
        android:id="@+id/al_tv_insertpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/insert_your_pin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/txt_light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/al_rl_title_main"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        android:id="@+id/editText"
        layout="@layout/otp_reader_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/as_tv_forget_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/forgotten_your_pin"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/txt_light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/as_tv_create_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/don_t_have_a_pin_create_your_pin"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/txt_light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/as_tv_forget_pin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:background="@drawable/bg_button_blue"
            android:fontFamily="@font/avenir_roman"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/login"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>