<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="@dimen/dimen_10dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/faaa2_acet_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/txt_light_grey"
                    android:ems="16"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/country"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/txt_dark_blue"
                    android:textColorHint="@color/txt_light_grey" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/faaa2_acet_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/txt_light_grey"
                    android:ems="16"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/state"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/txt_dark_blue"
                    android:textColorHint="@color/txt_light_grey" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/faaa2_acet_postcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/txt_light_grey"
                    android:digits="0123456789"
                    android:ems="16"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/postcode"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/txt_dark_blue"
                    android:textColorHint="@color/txt_light_grey" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/faaa2_acet_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/txt_light_grey"
                    android:ems="16"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/email_mandatory"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/txt_dark_blue"
                    android:textColorHint="@color/txt_light_grey" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/faaa2_acet_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/txt_light_grey"
                    android:digits="0123456789"
                    android:ems="16"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:hint="@string/mobile"
                    android:maxLength="10"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/txt_dark_blue"
                    android:textColorHint="@color/txt_light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/faaa2_accb_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_light"
                    android:text=""
                    android:textColor="@color/txt_light_grey" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/i_m"
                        android:id="@+id/terms_conds"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/faaa2_actv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_button_blue"
                android:clickable="true"
                android:ems="8"
                android:focusable="true"
                android:fontFamily="@font/avenir_roman"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/next"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>